@@ -128,6 +128,11 @@ suppressWarningCorrupted=false
 # Warning window for EXIF loss when using Java resize
 suppressWarningJava=false
 
+# Currently selected sort type
+# 1: filename
+# 2: exif creation date
+sortType=1
+
 #
 # --- File Menu ---
 #
@@ -237,6 +242,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.4.2-b5
-releaseDate=2004/09/22
+version=1.4.2-b6
+releaseDate=2004/10/15
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\nScott Gartner\nAmedeo Paglione\nChris Schwerdt\nSeth Ladd\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor
