@@ -1,7 +1,8 @@
 # should ImageMagick support be enabled?
 im.enabled=true
 
-# path to the convert executable installed with ImageMagick
+# path to the convert executable installed with ImageMagick, including the name of the executable (jpegtran)
+# use forward slashes (/) rather than back slashes (\) even on Windows
 im.convertPath=/usr/local/bin/convert
 
 # Filters
