@@ -4,7 +4,8 @@ jp.enabled=true
 # should lossless cropping be enabled?
 jp.crop.enabled=true
 
-# path to the executable (must be a fully-qualified path)
+# path to the executable (must be a fully-qualified path), including the name of the executable (jpegtran)
+# use forward slashes (/) rather than back slashes (\) even on Windows
 jp.path=jpegtran
 
 # ignore error code sent back by the executable
