@@ -4,7 +4,8 @@ jp.enabled=true
 # should lossless cropping be enabled?
 jp.crop.enabled=false
 
-# path to the executable
+# path to the executable, including the name of the executable (jpegtran)
+# use forward slashes (/) rather than back slashes (\) even on Windows
 jp.path=Contents/MacOS/jpegtran
 
 # ignore error code sent back by the executable
